--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "type": "module",
   "dependencies": {
-    "svelte-device-info": "^1.0.0"
+    "svelte-device-info": "^1.0.0",
+    "svelte-modals": "^1.2.1",
+    "svelte-qrcode": "^1.0.0"
   }
 }
