--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "jsrsasign": "^10.8.6",
     "svelte-device-info": "^1.0.0",
     "svelte-modals": "^1.2.1",
